# jatsi

./: Cargo.toml  LICENSE  README.md  index.html  index.scss
.github/workflows/: pr_check.yml
jatsi_server/: Cargo.toml
jatsi_server/src/: main.rs
jatsi_shared/: Cargo.toml
jatsi_shared/src/: game.rs  lib.rs  rules.rs
jatsi_web/: Cargo.toml  README.md  index.scss
jatsi_web/src/: app.rs  die.rs  main.rs  score_card.rs
src/: dice.rs  errors.rs  game.rs  main.rs  rules.rs
src/components/: app.rs  die.rs  mod.rs  regular_polygon.rs  score_card.rs
