[package]
name = "jatsi"
version = "0.1.0"
edition = "2021"
description = "Yatzy game with configurable rules"
readme = "README.md"
repository = "https://github.com/japsu/jatsi"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = "0.19"
