[package]
name = "jatsi"
version = "0.1.0"
edition = "2021"
description = "Dice game with configurable rules"
readme = "README.md"
repository = "https://github.com/japsu/jatsi"
license = "MIT"

[dependencies]
itertools = "*"
rand = "*"
getrandom = { version = "*", features = ["js"] }
either = "*"
dioxus = { version = "*", features = ["web"] }
