[package]
name = "jatsi_web"
version = "0.1.0"
edition = "2021"
description = "Dice game with configurable rules"
readme = "README.md"
repository = "https://github.com/japsu/jatsi"
license = "MIT"


[dependencies]
dioxus = { version = "*", features = ["web"] }
dioxus-websocket-hooks = "*"
jatsi_shared = { path = "../jatsi_shared" }
